z-index correction

--- a/style.css
+++ b/style.css
@@ -101,7 +101,6 @@ a {
     position: relative;
     display: inline-block;
     margin: 1rem 0;
-    z-index: 1;
 }
 
 #title-1, #title-2 {
@@ -161,7 +160,7 @@ a {
     right: -40rem;
     animation: shipmove 2s cubic-bezier(0,.8,.1,1) forwards;
     animation-delay: 500ms;
-    z-index: 0;
+    z-index: -1;
 }
             @keyframes shipmove {
                 from {right: -40rem;}
